added angularJS api methods

--- a/ng_filters.html
+++ b/ng_filters.html
@@ -8,6 +8,15 @@
  |number : Format a number to a string.
  |orderBy : Orders an array by an expression.              eg:- |orderBy : 'country' which is a key of each dict in a list of dictionaries
  |uppercase : Format a string to upper case.
+
+ 
+                    API	                  
+angular.lowercase()	Converts a string to lowercase
+angular.uppercase()	Converts a string to uppercase
+angular.isString()	Returns true if the reference is a string
+angular.isNumber()	Returns true if the reference is a number
+
+Example usage :     $scope.x2 = angular.lowercase($scope.x1);
 -->
 
 <!--NOTE : We can have our custom filters too refer : https://www.w3schools.com/angular/angular_filters.asp-->
